# internal/services/catalog_read_service/docs/swagger.json
@@ -10,9 +10,9 @@
         "version": "1.0"
     },
     "paths": {
-        "/api/v1/products": {
+        "/api/v1/games": {
             "get": {
-                "description": "Get all products",
+                "description": "Get all games",
                 "consumes": [
                     "application/json"
                 ],
@@ -20,9 +20,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Products"
+                    "Games"
                 ],
-                "summary": "Get all product",
+                "summary": "Get all game",
                 "parameters": [
                     {
                         "type": "string",
@@ -44,15 +44,15 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/github_com_zizouhuweidi_retro-station_internal_services_catalogreadservice_internal_products_features_getting_products_v1_dtos.GetProductsResponseDto"
+                            "$ref": "#/definitions/github_com_zizouhuweidi_retro-station_internal_services_catalogreadservice_internal_games_features_getting_games_v1_dtos.GetGamesResponseDto"
                         }
                     }
                 }
             }
         },
-        "/api/v1/products/search": {
+        "/api/v1/games/search": {
             "get": {
-                "description": "Search products",
+                "description": "Search games",
                 "consumes": [
                     "application/json"
                 ],
@@ -60,9 +60,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Products"
+                    "Games"
                 ],
-                "summary": "Search products",
+                "summary": "Search games",
                 "parameters": [
                     {
                         "type": "string",
@@ -74,15 +74,15 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/github_com_zizouhuweidi_retro-station_internal_services_catalogreadservice_internal_products_features_searching_products_v1_dtos.SearchProductsResponseDto"
+                            "$ref": "#/definitions/github_com_zizouhuweidi_retro-station_internal_services_catalogreadservice_internal_games_features_searching_games_v1_dtos.SearchGamesResponseDto"
                         }
                     }
                 }
             }
         },
-        "/api/v1/products/{id}": {
+        "/api/v1/games/{id}": {
             "get": {
-                "description": "Get product by id",
+                "description": "Get game by id",
                 "consumes": [
                     "application/json"
                 ],
@@ -90,13 +90,13 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Products"
+                    "Games"
                 ],
-                "summary": "Get product",
+                "summary": "Get game",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Product ID",
+                        "description": "Game ID",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -106,7 +106,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/github_com_zizouhuweidi_retro-station_internal_services_catalogreadservice_internal_products_features_get_product_by_id_v1_dtos.GetProductByIdResponseDto"
+                            "$ref": "#/definitions/github_com_zizouhuweidi_retro-station_internal_services_catalogreadservice_internal_games_features_get_game_by_id_v1_dtos.GetGameByIdResponseDto"
                         }
                     }
                 }
@@ -114,13 +114,19 @@
         }
     },
     "definitions": {
-        "github_com_zizouhuweidi_retro-station_internal_services_catalogreadservice_internal_products_dto.ProductDto": {
+        "github_com_zizouhuweidi_retro-station_internal_services_catalogreadservice_internal_games_dto.GameDto": {
             "type": "object",
             "properties": {
                 "createdAt": {
                     "type": "string"
                 },
                 "description": {
+                    "type": "string"
+                },
+                "gameId": {
+                    "type": "string"
+                },
+                "genre": {
                     "type": "string"
                 },
                 "id": {
@@ -132,35 +138,32 @@
                 "price": {
                     "type": "number"
                 },
-                "productId": {
-                    "type": "string"
-                },
                 "updatedAt": {
                     "type": "string"
                 }
             }
         },
-        "github_com_zizouhuweidi_retro-station_internal_services_catalogreadservice_internal_products_features_get_product_by_id_v1_dtos.GetProductByIdResponseDto": {
+        "github_com_zizouhuweidi_retro-station_internal_services_catalogreadservice_internal_games_features_get_game_by_id_v1_dtos.GetGameByIdResponseDto": {
             "type": "object",
             "properties": {
-                "product": {
-                    "$ref": "#/definitions/github_com_zizouhuweidi_retro-station_internal_services_catalogreadservice_internal_products_dto.ProductDto"
+                "game": {
+                    "$ref": "#/definitions/github_com_zizouhuweidi_retro-station_internal_services_catalogreadservice_internal_games_dto.GameDto"
                 }
             }
         },
-        "github_com_zizouhuweidi_retro-station_internal_services_catalogreadservice_internal_products_features_getting_products_v1_dtos.GetProductsResponseDto": {
+        "github_com_zizouhuweidi_retro-station_internal_services_catalogreadservice_internal_games_features_getting_games_v1_dtos.GetGamesResponseDto": {
             "type": "object",
             "properties": {
-                "products": {
-                    "$ref": "#/definitions/utils.ListResult-github_com_zizouhuweidi_retro-station_internal_services_catalogreadservice_internal_products_dto_ProductDto"
+                "games": {
+                    "$ref": "#/definitions/utils.ListResult-github_com_zizouhuweidi_retro-station_internal_services_catalogreadservice_internal_games_dto_GameDto"
                 }
             }
         },
-        "github_com_zizouhuweidi_retro-station_internal_services_catalogreadservice_internal_products_features_searching_products_v1_dtos.SearchProductsResponseDto": {
+        "github_com_zizouhuweidi_retro-station_internal_services_catalogreadservice_internal_games_features_searching_games_v1_dtos.SearchGamesResponseDto": {
             "type": "object",
             "properties": {
-                "products": {
-                    "$ref": "#/definitions/utils.ListResult-github_com_zizouhuweidi_retro-station_internal_services_catalogreadservice_internal_products_dto_ProductDto"
+                "games": {
+                    "$ref": "#/definitions/utils.ListResult-github_com_zizouhuweidi_retro-station_internal_services_catalogreadservice_internal_games_dto_GameDto"
                 }
             }
         },
@@ -198,13 +201,13 @@
                 }
             }
         },
-        "utils.ListResult-github_com_zizouhuweidi_retro-station_internal_services_catalogreadservice_internal_products_dto_ProductDto": {
+        "utils.ListResult-github_com_zizouhuweidi_retro-station_internal_services_catalogreadservice_internal_games_dto_GameDto": {
             "type": "object",
             "properties": {
                 "items": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/github_com_zizouhuweidi_retro-station_internal_services_catalogreadservice_internal_products_dto.ProductDto"
+                        "$ref": "#/definitions/github_com_zizouhuweidi_retro-station_internal_services_catalogreadservice_internal_games_dto.GameDto"
                     }
                 },
                 "page": {
